--- a/ShoppingList.css
+++ b/ShoppingList.css
@@ -8,6 +8,7 @@ body{
     height: 100%;
 }
 
+
 .headers{
     display: flex;
     flex-direction: column;
@@ -25,24 +26,29 @@ hr{
     border-color: #b1f1b9;
 }
 
+
+/* Input Box and Button */
+
 .grid{
     display:grid;
     grid-template-columns: 1fr 1fr;
 }
 
 .input-button{
+    position: relative;
     padding:40px;
     font-size:24px;
 }
 
 .inputArea{
-    position: relative;
+    /* position: relative; */
     width:100%;
 }
 
 .input-button #userInput{
+    position: relative;
     background: #b1f1b9;
-    color:#6F808C;
+    columns: #000000;;
     width: 60%;
     font-family: 'Shadows Into Light',sans-serif;
     font-size: 2rem;
@@ -63,4 +69,159 @@ hr{
     outline: none;
     box-shadow: none;
     background: #c4f8cb;
+}
+
+.addButton{
+    position:absolute;
+    left:65%;
+    top:38%;
+    background: transparent;
+    width:35px;
+    height: 30px;
+    border-radius: 0 10px 10px 0;
+    border:none;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.addButton:hover{
+    background-color: rgb(146, 146, 253);
+}
+
+.addButton:focus{
+    outline: none;
+}
+
+.addButton img{
+    width:20px;
+}
+
+/* List Items */
+
+.main-list{
+    padding: 20px;
+    width:60%;
+    text-align: center;
+}
+
+.empty-list{
+    font-size: 2rem;
+}
+
+.main-list .list-item{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    padding-left: 20px;
+    margin-bottom: 5px;
+    font-size: 26px;
+    background: #b1f1b9;
+    border: 2px solid #6F808C;
+    color: #000000;
+    height: 60px;
+    width: 100%;
+    list-style: none;
+    transition: all .2s;
+}
+
+.main-list .list-item:hover{
+    background: #c4f8cb;
+    cursor: pointer;
+}
+
+
+.main-list .list-item:not(:first-child):not(:last-child) {
+  border-top: 1px solid #6F808C;
+  border-bottom: 1px solid #6F808C;
+}
+
+.main-list .list-item:nth-child(2) {
+  border-radius: 10px 10px 0px 0px;
+  border-bottom: 1px solid #6F808C;
+}
+
+.main-list .list-item:nth-last-child(1) {
+  border-radius: 0px 0px 10px 10px;
+  border-top: 1px solid #6F808C;
+}
+
+.task-done{
+    text-decoration: line-through;
+}
+
+.deleteButton{
+    position: absolute;
+    right:10%;
+    top:25%;
+    background: transparent;
+    width:35px;
+    height: 30px;
+    border-radius: 0 10px 10px 0;
+    border:none;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.deleteButton:hover{
+    background-color:rgb(255, 132, 132);
+}
+
+.deleteButton:focus{
+    outline: none;
+}
+
+.deleteButton img{
+    width:30px;
+}
+
+/* Mobile Screens */
+
+@media screen and (max-width:760px){
+    body{
+        overflow-x: hidden;
+    }
+    .headers{
+        margin-top:65px;
+    }   
+    .grid{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .input-button{
+        padding: 0;
+    }
+
+    #inputArea{
+        position:fixed;
+        top:0;
+        left:0;
+        z-index: 10;
+        width:100%;
+        box-shadow: 0px 0px 10px 1px #384046;
+    }
+    
+    .input-button #userInput{
+        border-radius:0;
+        margin:0;
+        border-left:0;
+        border-right: 0;
+        width:100%;
+    }
+
+    .addButton{
+        top:30%;
+        left:80%;
+    }
+
+    .main-list{
+        width:90%;
+    }
+
+    .main-list .list-item{
+        max-width:90%;
+        /* border-radius:5px; */
+    }
 }
