--- a/ShoppingList.css
+++ b/ShoppingList.css
@@ -32,21 +32,24 @@ hr{
 .grid{
     display:grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .input-button{
-    position: relative;
+    /* position: relative; */
     padding:40px;
     font-size:24px;
 }
 
 .inputArea{
-    /* position: relative; */
+    position: relative;
+    display: flex;
+    flex-direction: column;
     width:100%;
 }
 
 .input-button #userInput{
-    position: relative;
+    /* position: relative; */
     background: #b1f1b9;
     columns: #000000;;
     width: 60%;
@@ -73,8 +76,8 @@ hr{
 
 .addButton{
     position:absolute;
-    left:65%;
-    top:38%;
+    left:33%;
+    top:25%;
     background: transparent;
     width:35px;
     height: 30px;
